api-service/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: api-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: api-service
  type: ClusterIP
