api-service/np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-api
  namespace: api-service
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
  namespace: api-service
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: monitoring
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth-service
          podSelector:
            matchLabels:
              app: auth-service
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: image-service
          podSelector:
            matchLabels:
              app: image-service
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: api-service
spec:
  podSelector:
    matchLabels:
      app: api-service
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.231.20.0/24
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth-service
          podSelector:
            matchLabels:
              app: auth-service
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: image-service
          podSelector:
            matchLabels:
              app: image-service
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
